--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^6.29.0",
     "yup": "^1.6.1"
   },
